# search-engine

./: .gitignore  CMakeLists.txt  config.ini
common/: Config.cpp  Config.h  Database.cpp  Database.h  TextUtils.cpp  TextUtils.h
indexer/: Indexer.cpp  Indexer.h  ThreadPool.cpp  ThreadPool.h  main.cpp
searcher/: main.cpp
